test-cases/negative/test_020_incomplete_conditional.lay
# negative test: incomplete conditional statement
# expected: error should be thrown

if true


